---------------------------
testresources release notes
---------------------------

IN DEVELOPMENT
--------------

CHANGES
~~~~~~~

IMPROVEMENTS
~~~~~~~~~~~~

BUG FIXES
~~~~~~~~~

API CHANGES
~~~~~~~~~~~

INTERNALS
~~~~~~~~~

0.2.2
-----

BUG FIXES
~~~~~~~~~

* OptimisingTestSuite.addTest was not unpacking OptimisingTestSuite instances.
  When using testresources.TestLoader to load tests this was generating an
  unoptimised layout, with each test in its own little suite, and no resource
  sharing happening.

0.2.1
------

A small bugfix release for compatibility with newer testtools.

INTERNALS
~~~~~~~~~

* One test case wasn't upcalling setUp properly, causing test failures with
  more recent testtools that check for this mistake.

0.2
---

  CHANGES:

    * testresources needs testtools to run the testresources test suite. You
      can still use testresources without using testtools. (Jonathan Lange)

  IMPROVEMENTS:

    * Many more docstrings. (Jonathan Lange)

    * Expanded README. (Jonathan Lange)

    * Expanded TODO. (Jonathan Lange)

    * Resources can now be reset by overriding TestResource.reset, which for
      some resources is significantly cheaper. If checking for dirtiness is
      expensive, isDirty can also be overridden.
      (James Henstridge, Robert Collins)

    * Started keeping a NEWS file! (Jonathan Lange)

    * Resource creation and destruction are traced by calling methods on the
      TestResult object that tests are being run with.
      (Robert Collins, #284125)

  BUG FIXES:

    * Calling getResource on a dirty resource now triggers a clean and re-make
      of that resource. (Jonathan Lange)

    * All resources are dropped when a test with no declared resources is run.
      (James Henstridge)

    * A dirty or changed dependency of a resource makes the resource dirty too.
      (Robert Collins, #324202)

  API CHANGES:

    * adsorbSuite is now deprecated in favour of addTest. addTest now flattens